# bevy_fake_interior

./: .gitignore  Cargo.toml  README.md
assets/polyhaven.com/book_encyclopedia_set/: book_encyclopedia_set_01_1k.gltf
assets/polyhaven.com/dartboard/: dartboard_1k.gltf
assets/polyhaven.com/dirty_carpet/: dirty_carpet_1k.gltf
assets/polyhaven.com/fancy_picture_frame/: fancy_picture_frame_01_1k.gltf
assets/polyhaven.com/hanging_picture_frame_01/: hanging_picture_frame_01_1k.gltf
assets/polyhaven.com/hanging_picture_frame_02/: hanging_picture_frame_02_1k.gltf
assets/polyhaven.com/modern_arm_chair/: modern_arm_chair_01_1k.gltf
assets/polyhaven.com/modern_ceiling_lamp/: modern_ceiling_lamp_01_1k.gltf
assets/polyhaven.com/modern_coffee_table/: modern_coffee_table_01_1k.gltf
assets/polyhaven.com/modern_wooden_cabinet/: modern_wooden_cabinet_1k.gltf
assets/polyhaven.com/plastered_wall/: plastered_wall_1k.gltf
assets/shaders/: custom_material.wgsl  fake_interior.wgsl  show_prepass.wgsl
examples/: room_builder.rs  room_builder_gltf.rs  simple.rs  test_room_gltf.rs  test_rooms.rs
src/: extended_material.rs  lib.rs  main.rs
