[package]
name = "bevy_fake_interior"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"

bevy = { version = "0.12.0", features = ["dynamic_linking", "file_watcher"] }

bevy-inspector-egui = { version = "0.21" }
bevy_panorbit_camera = { version = "0.9", features = ["bevy_egui"] }
bevy_spectator = "0.4.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
