[package]
name = "bevy_fake_interior"
version = "0.0.1"
edition = "2021"
authors = ["Robert G. Jakabosky <rjakabosky+neopallium@neoawareness.com>"]
license = "MIT/Apache-2.0"
description = "Fake interior material for Bevy."
keywords = ["fake_interior", "bevy"]
repository = "https://github.com/Neopallium/bevy_fake_interior"
homepage = "https://github.com/Neopallium/bevy_fake_interior"

exclude = [
	"examples/*",
	"assets/textures/*",
]

[dependencies]
bevy = { version = "0.12.0", default-features = false, features = ["bevy_asset", "bevy_render", "bevy_pbr"] }

[dev-dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking", "file_watcher", "asset_processor", "basis-universal"] }

bevy-inspector-egui = { version = "0.21" }
bevy_panorbit_camera = { version = "0.9", features = ["bevy_egui"] }
bevy_spectator = "0.4.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
